# standalone-scripts

./: .gitignore  .uvrc  README.md  pyproject.toml  run.sh
artifactory_sync/: __init__.py  artifactory_requirements.txt  artifactory_sync.py  artifactory_sync_README.md
